project('Edgefixer', 'c',
    default_options: ['buildtype=release', 'warning_level=2', 'b_lto=true', 'b_ndebug=if-release', 'c_std=c99'],
    license: 'WTFPL',
    license_files: 'LICENSE',
    meson_version: '>=1.2.3',
    version: '3.0',
)

sources = [
     'EdgeFixer/edgefixer.h',
     'EdgeFixer/edgefixer.c',
     'EdgeFixer/vsplugin.c'
]

incdir = include_directories(
    run_command(
        find_program('python', 'python3'),
        '-c',
        'import vapoursynth as vs; print(vs.get_include())',
        check: true,
    ).stdout().strip(),
)

py = import('python').find_installation(pure: false)

shared_module('edgefixer',
    sources,
    gnu_symbol_visibility: 'hidden',
    include_directories: incdir,
    install: true,
    install_dir: py.get_install_dir() / 'vapoursynth/plugins',
    name_prefix: '',
)