[build-system]
requires = ["meson-python", "vapoursynth"]
build-backend = "mesonpy"

[project]
name = "vapoursynth-edgefixer"
description = "EdgeFixer repairs bright and dark line artifacts near the border of an image."
readme = "README.md"
requires-python = ">=3.12"
license = "WTFPL"
license-files = ["LICENSE"]
authors = [
    {name = "Fredrik Mellbin", email = "fredrik.mellbin@gmail.com"},
]
keywords = ["source", "video", "edges"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Plugins",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: C++",
    "Topic :: Multimedia :: Video",
]
dependencies = ["VapourSynth"]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/sekrit-twc/EdgeFixer.git"
Issues = "https://github.com/sekrit-twc/EdgeFixer/issues"

[tool.meson-python.wheel]
exclude = ["*/*.dll.a", "*/*.lib"]
